--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,9 @@
 <!doctype html>
 <meta charset=utf8>
-<meta content=width=device-width,initial-scale=1 name=viewport>
+<meta content=initial-scale=1,width=device-width name=viewport>
 <title>parse-latin</title>
-<link rel=stylesheet href=index.css>
-<header>
-  <h1><a href=https://github.com/wooorm/parse-latin>parse-latin</a></h1>
-</header>
-<div>
-  <textarea autofocus>The easiest way to see how parse-latin tokenises and parses, is by using this online demo. Here you can change the text, and on the right the corresponding syntax tree will be shown.
-
-Just try it. It’s pretty cool :)</textarea>
-</div>
-<pre><code></code></pre>
-<script type=module src=index.module.js></script>
+<link href=//esm.sh/@wooorm/starry-night@3/style/both.css rel=stylesheet>
+<link href=index.css rel=stylesheet>
+<main></main>
+<script src=index.module.js type=module></script>
 <script nomodule src=index.nomodule.js></script>
